--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,5 @@
 @import url(./blocks/form/__input/-error/form__input-error.css);
 @import url(./blocks/form/__input//-error/_active/form__input-error_active.css);
 @import url(./blocks/form/__field/form__field.css);
+@import url(./blocks/form/__btnload/form-btnload.css);
+@import url(./blocks/form/__btnload/_active/form-btnload_active.css);
